fixed selection styling for chat bubbles to be more legible

--- a/public/reset.css
+++ b/public/reset.css
@@ -27,7 +27,7 @@ textarea {
 }
 
 ::selection {
-  background: #7D16FF;
+  background: #3818e5;
   color: #ffffff;
 }
 
